--- a/src/app/components/checkout-process/checkout-data/checkout-data.component.html
+++ b/src/app/components/checkout-process/checkout-data/checkout-data.component.html
@@ -11,6 +11,12 @@
     <input formControlName="customerName" type="text" class="w-full border rounded-lg px-3 py-2 text-sm">
   </section>
 
+  <section class="space-y-2">
+  <label class="text-sm">Correo electrónico</label>
+  <input formControlName="customerEmail" type="email" placeholder="tu@email.com"
+    class="w-full border rounded-lg px-3 py-2 text-sm">
+</section>
+
   <!-- Contacto -->
   <section class="space-y-2">
     <label class="text-sm">Número de WhatsApp</label>
