--- a/src/app/components/landing/landing-home/landing-home.component.html
+++ b/src/app/components/landing/landing-home/landing-home.component.html
@@ -28,8 +28,26 @@
   >
     <span class="text-md font-bold mb-4 text-[#EB9B8A]">Mis productos</span>
     <mat-icon>store</mat-icon>
-  </div>
+
+
 </div>
+
+     <div
+    class="bg-white shadow rounded-2xl overflow-hidden p-12 w-36 h-36 flex flex-col items-center justify-center cursor-pointer"
+    (click)="redirectToMyCategories()"
+  >
+    <span class="text-md font-bold mb-4 text-[#EB9B8A]">Mis categorias</span>
+    <mat-icon>store</mat-icon>
+  </div>
+
+       <div
+    class="bg-white shadow rounded-2xl overflow-hidden p-12 w-36 h-36 flex flex-col items-center justify-center cursor-pointer"
+    (click)="redirectToMyOrders()"
+  >
+    <span class="text-md font-bold mb-4 text-[#EB9B8A]">Mis pedidos</span>
+    <mat-icon>store</mat-icon>
+  </div>
+  </div>
 
 
   <!-- Contenido principal -->
