--- a/src/app/components/stores/store-schedule/store-schedule.component.html
+++ b/src/app/components/stores/store-schedule/store-schedule.component.html
@@ -32,6 +32,7 @@
 
         <div class="flex justify-end">
           <button type="submit" [disabled]="form.invalid || form.pristine"
+          (click)="save()"
                   class="rounded-xl bg-emerald-500 hover:bg-emerald-600 text-white px-5 py-2.5 shadow-sm">
             Guardar cambios
           </button>
